done almost only the ribbon left will fix tomorrow

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
       <!-- popular tours sec end -->
       <!-- desination sec start -->
       <section class="destination-sec">
-        <h1 class="common-h1">Choose Your Destination</h1>
+        <h1 class="destination-h1">Choose Your Destination</h1>
         <p class="destination-p">
           Select your dream destination effortlessly with TravelCompass. From
           enchanting landscapes to rich cultural experiences, explore a variety
@@ -248,7 +248,7 @@
           </div>
           <div class="choose-card-3">
             <img src="./images/price-tag.svg" alt="price-tag.svg" />
-            <h1 class="choose-us-h1">Handpicked Hotels</h1>
+            <h1 class="choose-us-h1">Best Price Guarantee</h1>
             <p class="choose-us-p">
               Secure unbeatable deals on your travel bookings, ensuring you get
               the most value for your money. Your satisfaction at the best
@@ -856,9 +856,8 @@
           </h1>
         </div>
         <p class="footer-sec-p">
-          Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae
-          blandit orci potenti vulputate. Leo erat maecenas vitae elementum
-          ultricies nullam.
+          Your passport to seamless journeys. Explore the world hassle-free with
+          our expert guidance and unforgettable travel experiences.
         </p>
         <div class="footer-icons">
           <i class="fa-brands fa-x-twitter"></i>
