fixed responsive on mobile good night!

--- a/index.html
+++ b/index.html
@@ -485,8 +485,8 @@
       <!-- video sec start -->
       <section class="video-sec">
         <div class="video-sec-left">
-          <h1 class="common-h1">A Simple Perfect Place To Get Lost</h1>
-          <p class="common-p">
+          <h1 class="video-sec-h1">A Simple Perfect Place To Get Lost</h1>
+          <p class="video-sec-p">
             Find tranquility and explore at your own pace. Lose yourself in the
             beauty of simplicity, creating timeless memories.
           </p>
