new section added

--- a/index.html
+++ b/index.html
@@ -482,6 +482,139 @@
         </button>
       </section>
       <!-- deals and discocunt sec end-->
+
+      <section class="trending-sec">
+        <div class="trending-left">
+          <img src="./images/trending-img-1.png" alt="trending-img-1.png" />
+        </div>
+        <div class="trending-right">
+          <button>Trending Now</button>
+          <h1>Wilderlife of Alaska</h1>
+          <div class="trending-rating">
+            <div class="trending-location">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="11"
+                height="14"
+                viewBox="0 0 11 14"
+                fill="none"
+              >
+                <path
+                  d="M5.50001 0C4.04184 0.00172024 2.6439 0.581735 1.61282 1.61281C0.581741 2.64389 0.00172609 4.04184 5.85144e-06 5.5C-0.00174059 6.69161 0.387496 7.85089 1.10801 8.8C1.10801 8.8 1.25801 8.9975 1.28251 9.026L5.50001 14L9.71951 9.0235C9.74151 8.997 9.89201 8.8 9.89201 8.8L9.89251 8.7985C10.6127 7.84981 11.0017 6.69107 11 5.5C10.9983 4.04184 10.4183 2.64389 9.38719 1.61281C8.35612 0.581735 6.95817 0.00172024 5.50001 0ZM5.50001 7.5C5.10444 7.5 4.71776 7.3827 4.38887 7.16294C4.05997 6.94318 3.80362 6.63082 3.65225 6.26537C3.50087 5.89991 3.46126 5.49778 3.53844 5.10982C3.61561 4.72186 3.80609 4.36549 4.08579 4.08579C4.3655 3.80608 4.72186 3.6156 5.10983 3.53843C5.49779 3.46126 5.89992 3.50087 6.26537 3.65224C6.63082 3.80362 6.94318 4.05996 7.16294 4.38886C7.38271 4.71776 7.50001 5.10444 7.50001 5.5C7.49934 6.03023 7.28842 6.53855 6.91349 6.91348C6.53856 7.28841 6.03024 7.49934 5.50001 7.5Z"
+                  fill="white"
+                />
+              </svg>
+              <p>Alaska, USA</p>
+            </div>
+            <div class="trending-rating">
+              <div class="trending-star">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="15"
+                  viewBox="0 0 16 15"
+                  fill="none"
+                >
+                  <path
+                    d="M8 0L10.116 5.08754L15.6085 5.52786L11.4238 9.11246L12.7023 14.4721L8 11.6L3.29772 14.4721L4.5762 9.11246L0.391548 5.52786L5.88397 5.08754L8 0Z"
+                    fill="#FFA432"
+                  />
+                </svg>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="15"
+                  viewBox="0 0 16 15"
+                  fill="none"
+                >
+                  <path
+                    d="M8 0L10.116 5.08754L15.6085 5.52786L11.4238 9.11246L12.7023 14.4721L8 11.6L3.29772 14.4721L4.5762 9.11246L0.391548 5.52786L5.88397 5.08754L8 0Z"
+                    fill="#FFA432"
+                  />
+                </svg>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="15"
+                  viewBox="0 0 16 15"
+                  fill="none"
+                >
+                  <path
+                    d="M8 0L10.116 5.08754L15.6085 5.52786L11.4238 9.11246L12.7023 14.4721L8 11.6L3.29772 14.4721L4.5762 9.11246L0.391548 5.52786L5.88397 5.08754L8 0Z"
+                    fill="#FFA432"
+                  />
+                </svg>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="15"
+                  viewBox="0 0 16 15"
+                  fill="none"
+                >
+                  <path
+                    d="M8 0L10.116 5.08754L15.6085 5.52786L11.4238 9.11246L12.7023 14.4721L8 11.6L3.29772 14.4721L4.5762 9.11246L0.391548 5.52786L5.88397 5.08754L8 0Z"
+                    fill="#FFA432"
+                  />
+                </svg>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="15"
+                  viewBox="0 0 16 15"
+                  fill="none"
+                >
+                  <path
+                    d="M8 0L10.116 5.08754L15.6085 5.52786L11.4238 9.11246L12.7023 14.4721L8 11.6L3.29772 14.4721L4.5762 9.11246L0.391548 5.52786L5.88397 5.08754L8 0Z"
+                    fill="#FFA432"
+                  />
+                </svg>
+              </div>
+              <p><span>4.9</span> (300+ Reviews)</p>
+            </div>
+          </div>
+          <p>
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+            sint. Velit officia consequat duis enim velit mollit. Exercitation
+            veniam consequat sunt nostrud amet.
+          </p>
+          <div class="trending-btn">
+            <button>Book Now</button>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="106"
+              height="50"
+              viewBox="0 0 106 50"
+              fill="none"
+            >
+              <circle cx="25" cy="25" r="25" fill="white" fill-opacity="0.2" />
+              <circle
+                cx="25"
+                cy="25"
+                r="24.5"
+                stroke="white"
+                stroke-opacity="0.2"
+              />
+              <path
+                d="M33.5645 20.2789C33.2852 19.6372 32.8825 19.0558 32.379 18.5671C31.875 18.0769 31.2808 17.6874 30.6288 17.4197C29.9526 17.141 29.2274 16.9983 28.4952 17C27.468 17 26.4658 17.2791 25.5948 17.8063C25.3865 17.9324 25.1886 18.0709 25.001 18.2218C24.8135 18.0709 24.6156 17.9324 24.4072 17.8063C23.5363 17.2791 22.5341 17 21.5069 17C20.7672 17 20.0505 17.1406 19.3733 17.4197C18.7191 17.6885 18.1294 18.0751 17.6231 18.5671C17.1189 19.0552 16.7161 19.6368 16.4376 20.2789C16.1479 20.9466 16 21.6558 16 22.3855C16 23.074 16.1417 23.7914 16.423 24.5211C16.6584 25.131 16.9959 25.7636 17.4272 26.4025C18.1107 27.4134 19.0503 28.4678 20.2171 29.5366C22.1507 31.3084 24.0655 32.5323 24.1468 32.5819L24.6406 32.8961C24.8593 33.0346 25.1406 33.0346 25.3594 32.8961L25.8532 32.5819C25.9345 32.5302 27.8472 31.3084 29.7828 29.5366C30.9496 28.4678 31.8893 27.4134 32.5727 26.4025C33.004 25.7636 33.3437 25.131 33.577 24.5211C33.8583 23.7914 34 23.074 34 22.3855C34.0021 21.6558 33.8541 20.9466 33.5645 20.2789Z"
+                fill="white"
+              />
+              <circle cx="81" cy="25" r="25" fill="white" fill-opacity="0.2" />
+              <circle
+                cx="81"
+                cy="25"
+                r="24.5"
+                stroke="white"
+                stroke-opacity="0.2"
+              />
+              <path
+                d="M82.273 21.4535V17L87.1165 21.8435L91 25.727L87.0476 29.0208L82.273 33V28.6422C73.8907 28.0104 70.954 32.8611 70.954 32.8611C70.954 29.8389 71.203 26.7025 73.5789 24.3275C76.3408 21.5647 80.3405 21.3692 82.273 21.4535Z"
+                fill="white"
+              />
+            </svg>
+          </div>
+        </div>
+      </section>
+
       <!-- video sec start -->
       <section class="video-sec">
         <div class="video-sec-left">
@@ -553,7 +686,7 @@
                   alt="review-person-1.jpg"
                 />
                 <div class="person-details">
-                  <h1>Shejan Mahamud</h1>
+                  <h1>Shejan</h1>
                   <p>Web Developer</p>
                 </div>
               </div>
