--- a/index.html
+++ b/index.html
@@ -573,9 +573,9 @@
             </div>
           </div>
           <p>
-            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
-            sint. Velit officia consequat duis enim velit mollit. Exercitation
-            veniam consequat sunt nostrud amet.
+            Explore Alaska's untamed beauty with its diverse wildlife, from
+            majestic bears and eagles to playful otters in their natural
+            habitats.
           </p>
           <div class="trending-btn">
             <button>Book Now</button>
